kubernetes-networks/kube-dashboard-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-svc
  namespace: kube-system
spec:
  selector:
    app: kubernetes-dashboard
  type: ClusterIP
  clusterIP: None
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9090
---
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: kubernetes-dashboard
  namespace: kube-system
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - http:
      paths:
      - path: /dashboard(/|$)(.*)
        backend:
          serviceName: kubernetes-dashboard
          servicePort: 9090
